[package]
name = "fsmphelper"
version = "0.1.0"
authors = ["Klas Björkqvist <klas.bjorkqvist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
